fix align button to enable visually impaired

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -112,6 +112,9 @@ body {
             }
 
             .bvi-container {
+                width: 100%;
+                display: flex;
+                align-items: center;
                 margin: 5% auto;
                 
 
